--- a/ecs_service.yaml
+++ b/ecs_service.yaml
@@ -1,5 +1,7 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: Deploy a service on ECS cluster backed by Fargate.
+Metadata:
+  License: Apache-2.0
 
 Parameters:
   Name:
