--- a/ec2.yaml
+++ b/ec2.yaml
@@ -70,8 +70,14 @@ Resources:
 
 Outputs:
   InstanceId:
-    Description: InstanceId of the newly created EC2 instance
+    Description: InstanceId of the newly created EC2 instance.
     Value: !Ref 'EC2Instance'
   AZ:
-    Description: Availability Zone of the newly created EC2 instance
+    Description: Availability Zone of the newly created EC2 instance.
     Value: !GetAtt [EC2Instance, AvailabilityZone]
+  PublicDNS:
+    Description: Public DNSName of the newly created EC2 instance.
+    Value: !GetAtt [EC2Instance, PublicDnsName]
+  PublicIP:
+    Description: Public IP address of the newly created EC2 instance.
+    Value: !GetAtt [EC2Instance, PublicIp]
